# Looper-Audio

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: get_cpm.cmake
docs/: PLAN.md
src/app/: CMakeLists.txt  LevelMeter.h  Main.cpp  MainComponent.cpp  MainComponent.h  PianoRoll.h
src/engine/: AudioEngine.cpp  AudioEngine.h  AudioFilePlayerNode.h  AudioGraph.h  ClipData.h  EngineCommand.h  Interpolation.h  MasterBusNode.h  MidiNote.h  Node.h  OfflineRenderer.h  OscillatorNode.h  Pattern.h  ProcessContext.h  Sequencer.h  SequencerMath.h  SineVoice.h  SynthInstrumentNode.h  TempoMap.h  Transport.h
src/model/: Clip.h  History.h  Serialization.h  Song.h  Track.h
src/rt/: CMakeLists.txt  RealtimeGuard.h  SpscRingBuffer.h
tests/: CMakeLists.txt
tests/engine/: InterpolationTests.cpp  MidiNoteTests.cpp  SequencerMathTests.cpp  TempoMapTests.cpp  TransportTests.cpp
tests/model/: HistoryTests.cpp  SerializationTests.cpp  SongTests.cpp
tests/rt/: SpscRingBufferTests.cpp
tools/bounce/: CMakeLists.txt  main.cpp
